--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+    background-color: rgb(94, 74, 74);
+    /* border: 1px solid black; */
+    max-width: 500px;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-wrapper h1{
+    color: black;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button{
+    /* width: 100%; */
+    /* border: 1px solid black; */
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.button input{
+    width: 300px;
+    /* background-color: gray; */
+    padding: 15px;
+    border-radius:4px ;
+    border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button button{
+    padding: 5px;
+    font-size: large;
+    margin-left: 10px;
+    width: 90px;
+    background-color: rgb(197, 183, 183);
+    border: none;
+    border-radius: 3px;
 }
