--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,15 @@
     border: none;
     border-radius: 3px;
 }
+
+ul li {
+    list-style: none;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    background-color: beige;
+    padding: 10px;
+    margin-top:20px ;
+    border-radius: 4px;
+    border: 1px solid rgb(99, 95, 95);
+}
